apps/base/download-sickchill/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: download-sickchill
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
