apps/base/download-sickchill/deploy/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sickchill
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sickchill
      app.kubernetes.io/component: sickchill
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sickchill
        app.kubernetes.io/component: sickchill
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000 # sickchill
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: sickchill
        image: "registry.lan/sickchill:2026.9.18-3.14.8-slim-trixie"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
          name: sickchill
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: sickchill
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 256Mi
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
        - name: sickchill-data
          mountPath: /data
          subPath: data
        - name: sickchill-download
          mountPath: /mnt/download
        - name: sickchill-multimedia
          mountPath: /mnt/multimedia
        - name: sickchill-config
          mountPath: /app/config_delta.ini
          subPath: config_delta.ini
        - name: tmp-volume
          mountPath: /tmp
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      - name: sickchill-data
        persistentVolumeClaim:
          claimName: sickchill-data
      - name: sickchill-config
        secret:
          secretName: sickchill-config
      - name: sickchill-download
        persistentVolumeClaim:
          claimName: nfs-download
      - name: sickchill-multimedia
        persistentVolumeClaim:
          claimName: nfs-multimedia
      - name: tmp-volume
        emptyDir: {}
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/general-purpose: 'yes'
