apps/base/download-sickchill/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sickchill
spec:
  ports:
  - port: 80
    targetPort: sickchill
    name: web
  selector:
      app.kubernetes.io/name: sickchill
      app.kubernetes.io/component: sickchill
