apps/base/download-sickchill/deploy/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-sickchill
spec:
  types: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: sickchill
      app.kubernetes.io/component: sickchill

  ingress:
    - ports:
        - port: sickchill
      from:
        # Allow from the ingress controller
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx

        # Allow from sabnzbd
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: download-sabnzbd
          podSelector:
            matchLabels:
              app.kubernetes.io/name: sabnzbd
              app.kubernetes.io/component: sabnzbd
